--- a/templates/index.html
+++ b/templates/index.html
@@ -16,16 +16,17 @@
 </div>
 <div class="number-pad-container">
     <div class="number-pad">
-        <button class="number-button-index" onclick="redirectToPage('/iphone')">iOS</button>
+        <button class="number-button-index" onclick="redirectToPage('/ios')">iOS</button>
         <button class="number-button-index" onclick="redirectToPage('/android')">Android</button>
         
     </div>
 </div>
-<script>
+<!-- <script>
     function redirectToPage(page) {
             window.location.href = page;
     }
-</script>
+</script> -->
+<script src="/static/script.js"></script>
 
 
 </body>
