--- a/templates/numpad-ios.html
+++ b/templates/numpad-ios.html
@@ -38,14 +38,11 @@
         <button class="number-button-ios" onclick="appendToAmount('0')">0</button>
         <button class="number-button-ios" onclick="submitForm()">↵</button>
         <button class="green-button " onclick="appendToAmount('-')">減號</button>
+        <button class="po-button " onclick="redirectToPage('/ios_place_order')">叫貨</button>
     </div>
 </div>
 
 <script src="/static/script.js"></script>
-<!-- <script>
-    document.addEventListener("DOMContentLoaded", init);
-</script> -->
-
 
 </body>
 </html>
