--- a/templates/numpad-android.html
+++ b/templates/numpad-android.html
@@ -29,14 +29,11 @@
         <button class="green-button" onclick="appendToAmount('-')">減號</button>
         <button class="bigger-button" onclick="resetForm()">Reset</button>
         <button class="number-button" onclick="submitForm()">↵</button>
+        <button class="po-button" onclick="redirectToPage('/android_place_order')">叫貨</button>
     </div>
 </div>
 
 <script src="/static/script.js"></script>
-<!-- <script>
-    document.addEventListener("DOMContentLoaded", init);
-</script> -->
-
 
 </body>
 </html>
